--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="home">
   {%- if page.title -%}
-    <h1 class="Angela Brisotto">{{ page.title }}</h1>
+    <h1 class="your title">{{ page.title }}</h1>
   {%- endif -%}
 
   {{ content }}
